--- a/src/browser/scss/_vars.scss
+++ b/src/browser/scss/_vars.scss
@@ -28,7 +28,7 @@ $accent: adjust_hue($base, -10);
 
     --nav-height:40rem;
     --sidepanel-size:300rem;
-    --scrollbar-size:30rem;
+    --scrollbar-size:20rem;
 
     --pixel-scale:1;
 
